--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <footer class="rodape">
         <h3>ATENÇÃO: apenas letras e sem acento.</h3>
         <div class="icons">
-            <a href="https://www.linkedin.com/in/gabriel-guimaraes-4a3034217/"><ion-icon name="logo-linkedin"></ion-icon></a>
-            <a href="https://www.linkedin.com/in/gabriel-guimaraes-4a3034217/">Linkedin</a>
+            <a href="https://www.linkedin.com/in/gabriel-alc%C3%A2ntara-4a3034217?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><ion-icon name="logo-linkedin"></ion-icon></a>
+            <a href="https://www.linkedin.com/in/gabriel-alc%C3%A2ntara-4a3034217?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Linkedin</a>
             <a href="https://github.com/G4F411"><ion-icon name="logo-github"></ion-icon></a>
             <a href="https://github.com/G4F411">Github</a>
         </div>
